--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>CV — Jason Fievez</title>
   <meta name="description" content="CV interactif de Jason Fievez — service client, chef de rang, communication." />
-  <link rel="preload" href="assets/profile.jpg" as="image" />
+  <link rel="preload" href="https://headshootpxg.github.io/WebsiteCV/assets/profile.jpg" as="image" />
   <link rel="stylesheet" href="style.css" />
 
   <!-- Open Graph (aperçus LinkedIn/FB) -->
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Jason Fievez — Chef de rang polyvalent" />
 <meta property="og:description" content="Service client, relation, encaissement, immersion en Californie." />
-<meta property="og:image" content="assets/cover.jpg" />
-<meta property="og:url" content="http://localhost:5173/" />
+<meta property="og:image" content="https://headshootpxg.github.io/WebsiteCV/assets/cover.jpg" />
+<meta property="og:url" content="https://headshootpxg.github.io/WebsiteCV/" />
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Jason Fievez — Chef de rang polyvalent" />
 <meta name="twitter:description" content="Service client, relation, encaissement, immersion en Californie." />
-<meta name="twitter:image" content="assets/cover.jpg" />
+<meta name="twitter:image" content="https://headshootpxg.github.io/WebsiteCV/assets/cover.jpg" />
 
 <!-- Couleur du navigateur (mobile) -->
 <meta name="theme-color" content="#0b1020" />
@@ -35,8 +35,8 @@
   "telephone": "+33612661680",
   "address": { "@type": "PostalAddress", "addressLocality": "Gamaches, FR" },
   "description": "Service client, relation, encaissements. Immersion linguistique en Californie.",
-  "url": "http://localhost:5173/",
-  "image": "http://localhost:5173/assets/profile.jpg",
+  "url": "https://headshootpxg.github.io/WebsiteCV/",
+  "image": "https://headshootpxg.github.io/WebsiteCV/assets/profile.jpg",
   "sameAs": []
 }
 </script>
@@ -68,7 +68,7 @@
     <!-- En-tête / Hero -->
     <header id="top" class="hero">
       <div class="pfp">
-        <img src="assets/profile.jpg" alt="Photo de Jason" />
+        <img src="https://headshootpxg.github.io/WebsiteCV/assets/profile.jpg" alt="Photo de Jason" />
         <span class="halo"></span>
       </div>
       <div class="hero-text">
@@ -139,3 +139,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
