--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>CV — Jason Fievez</title>
   <meta name="description" content="CV interactif de Jason Fievez — service client, chef de rang, communication." />
-  <link rel="preload" href="https://headshootpxg.github.io/WebsiteCV/assets/profile.jpg" as="image" />
+  <link rel="preload" href="assets/profile.jpg" as="image" />
   <link rel="stylesheet" href="style.css" />
 
   <!-- Open Graph (aperçus LinkedIn/FB) -->
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Jason Fievez — Chef de rang polyvalent" />
 <meta property="og:description" content="Service client, relation, encaissement, immersion en Californie." />
-<meta property="og:image" content="https://headshootpxg.github.io/WebsiteCV/assets/cover.jpg" />
-<meta property="og:url" content="https://headshootpxg.github.io/WebsiteCV/" />
+<meta property="og:image" content="assets/cover.jpg" />
+<meta property="og:url" content="http://localhost:5173/" />
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Jason Fievez — Chef de rang polyvalent" />
 <meta name="twitter:description" content="Service client, relation, encaissement, immersion en Californie." />
-<meta name="twitter:image" content="https://headshootpxg.github.io/WebsiteCV/assets/cover.jpg" />
+<meta name="twitter:image" content="assets/cover.jpg" />
 
 <!-- Couleur du navigateur (mobile) -->
 <meta name="theme-color" content="#0b1020" />
@@ -35,8 +35,8 @@
   "telephone": "+33612661680",
   "address": { "@type": "PostalAddress", "addressLocality": "Gamaches, FR" },
   "description": "Service client, relation, encaissements. Immersion linguistique en Californie.",
-  "url": "https://headshootpxg.github.io/WebsiteCV/",
-  "image": "https://headshootpxg.github.io/WebsiteCV/assets/profile.jpg",
+  "url": "http://localhost:5173/",
+  "image": "http://localhost:5173/assets/profile.jpg",
   "sameAs": []
 }
 </script>
@@ -68,13 +68,13 @@
     <!-- En-tête / Hero -->
     <header id="top" class="hero">
       <div class="pfp">
-        <img src="https://headshootpxg.github.io/WebsiteCV/assets/profile.jpg" alt="Photo de Jason" />
+        <img src="assets/profile.jpg" alt="Photo de Jason" />
         <span class="halo"></span>
       </div>
       <div class="hero-text">
         <h1 class="glow">Jason Fievez</h1>
-        <p class="subtitle">Chef de rang polyvalent — orienté service client</p>
-        <div class="badge">Actuellement en voyage linguistique en Californie</div>
+        <p class="subtitle">Chef de rang polyvalent</p>
+        <div class="badge">Actuellement en recherche d'emploi</div>
         <p class="meta">
           📍 Gamaches (80220) ·
           <a href="mailto:Jason.Fievez@free.fr">📧 Jason.Fievez@free.fr</a> ·
@@ -92,8 +92,9 @@
       <section id="about" class="card">
         <h2>À propos</h2>
         <p>
-          Employé de salle en casino, puis serveur et barman. Aujourd’hui, je développe mon anglais en immersion aux
-          États-Unis pour renforcer communication, service et relation client.
+          Professionnel de la restauration avec plus de 4 ans d’expérience en salle et au bar, j’ai développé un sens affûté du service client, de la gestion des flux et de la relation conviviale.  
+Actuellement en Californie, je perfectionne mon anglais afin d’élargir mes opportunités professionnelles à l’international.  
+Polyvalent, souriant et organisé, je recherche un poste où je pourrai mettre à profit mes compétences en accueil, service et communication.
         </p>
       </section>
 
@@ -139,4 +140,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
