--- a/index.html
+++ b/index.html
@@ -73,17 +73,45 @@
       </div>
       <div class="hero-text">
         <h1 class="glow">Jason Fievez</h1>
-        <p class="subtitle">Chef de rang polyvalent</p>
+     <p class="subtitle">
+      <span id="typing" aria-live="polite"></span><span class="caret">|</span>
+    </p>
         <div class="badge">Actuellement en recherche d'emploi</div>
-        <p class="meta">
-          📍 Gamaches (80220) ·
-          <a href="mailto:Jason.Fievez@free.fr">📧 Jason.Fievez@free.fr</a> ·
-          <a href="tel:+33612661680">📞 +33 6 12 66 16 80</a>
-        </p>
-        <div class="cta">
-          <a class="btn" href="#exp">Voir mon expérience</a>
-          <a class="btn ghost" href="#about">En savoir plus</a>
-        </div>
+  <p class="meta">
+    📍 Gamaches (80220) · 🎂 26 ans
+  </p>
+<!-- Réseaux / contact (CTA minimaliste & pro) -->
+<div class="socials" role="group" aria-label="Réseaux et contact">
+  <!-- Email -->
+  <a class="social-btn" href="mailto:Jason.Fievez@free.fr" aria-label="Envoyer un email">
+    <!-- icône mail -->
+    <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true">
+      <path fill="currentColor" d="M20 5H4a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2Zm0 2-8 5L4 7h16Zm0 10H4V9l8 5 8-5v8Z"/>
+    </svg>
+  </a>
+
+  <!-- LinkedIn -->
+  <a class="social-btn" href="https://www.linkedin.com/in/ton-profil" target="_blank" rel="noopener" aria-label="LinkedIn">
+    <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true">
+      <path fill="currentColor" d="M6.94 7.5A1.94 1.94 0 1 1 5 5.56 1.94 1.94 0 0 1 6.94 7.5ZM5.48 9h2.9v10h-2.9Zm5.02 0h2.78v1.36h.04A3.05 3.05 0 0 1 16.1 9c3.01 0 3.57 1.98 3.57 4.55V19h-2.9v-4.2c0-1 0-2.27-1.38-2.27s-1.59 1.08-1.59 2.2V19h-2.9Z"/>
+    </svg>
+  </a>
+
+  <!-- Instagram -->
+  <a class="social-btn" href="https://instagram.com/ton_profil" target="_blank" rel="noopener" aria-label="Instagram">
+    <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true">
+      <path fill="currentColor" d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2Zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5a4.25 4.25 0 0 0 4.25-4.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5Zm4.25 3.25a5.25 5.25 0 1 1 0 10.5 5.25 5.25 0 0 1 0-10.5Zm0 1.5a3.75 3.75 0 1 0 0 7.5 3.75 3.75 0 0 0 0-7.5Zm5-1.75a.75.75 0 1 1 0 1.5.75.75 0 0 1 0-1.5Z"/>
+    </svg>
+  </a>
+
+  <!-- (Optionnel) Téléphone -->
+  <a class="social-btn" href="tel:+33612661680" aria-label="Appeler">
+    <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true">
+      <path fill="currentColor" d="M6.62 10.79a15.05 15.05 0 0 0 6.59 6.59l2.2-2.2a1 1 0 0 1 1.01-.24 11.36 11.36 0 0 0 3.56.57 1 1 0 0 1 1 1V20a1 1 0 0 1-1 1A17 17 0 0 1 3 7a1 1 0 0 1 1-1h3.5a1 1 0 0 1 1 1 11.36 11.36 0 0 0 .57 3.56 1 1 0 0 1-.24 1.01l-2.21 2.22Z"/>
+    </svg>
+  </a>
+</div>
+
       </div>
     </header>
 
@@ -92,10 +120,9 @@
       <section id="about" class="card">
         <h2>À propos</h2>
         <p>
-          Professionnel de la restauration avec plus de 4 ans d’expérience en salle et au bar, j’ai développé un sens affûté du service client, de la gestion des flux et de la relation conviviale.  
-Actuellement en Californie, je perfectionne mon anglais afin d’élargir mes opportunités professionnelles à l’international.  
-Polyvalent, souriant et organisé, je recherche un poste où je pourrai mettre à profit mes compétences en accueil, service et communication.
-        </p>
+Professionnel du service client et de la restauration, j’ai développé une expertise dans la gestion des clients, le service en salle et la coordination d’équipe.
+Fort de plusieurs années en restauration et en casino, je maîtrise la rigueur d’encaissement, la relation client personnalisée et la gestion des priorités en période de forte affluence.
+Actuellement en immersion linguistique en Californie, j’améliore mon anglais afin de renforcer mes compétences en communication et relation internationale. </p>
       </section>
 
       <!-- Expériences (timeline accordéon) -->
